--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+#springdoc.api-docs.path=/api-docs
+#springdoc.swagger-ui.path=/swagger-ui
+#springdoc.show-login-endpoint=true
