Modification du stockage de l'image avec cloudinary

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.servlet.multipart.max-request-size=10MB
 #springdoc.api-docs.path=/api-docs
 #springdoc.swagger-ui.path=/swagger-ui
 #springdoc.show-login-endpoint=true
+
+rental.jwtKey = "H8dhT9s1LXyFaL2GL1eY1gJxOIuy57aO"
+#rental.CLOUDINARY_URL="cloudinary://344757681628711:wmAlqMGlVc8Dx-u4tUvh4ySNnlo@dthhif8wt"
+#rental.CLOUDINARY_CLOUD_NAME="dthhif8wt"
+#rental.CLOUDINARY_API_KEY="344757681628711"
+#rental.CLOUDINARY_API_SECRET="wmAlqMGlVc8Dx-u4tUvh4ySNnlo"
